k8s/ignite.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ignite-cluster
spec:
  serviceName: "ignite"
  replicas: 2
  selector:
    matchLabels:
      app: ignite
  template:
    metadata:
      labels:
        app: ignite
    spec:
      containers:
        - name: ignite
          image: apacheignite/ignite:2.16.0
          ports:
            - containerPort: 47100 # communication SPI port
            - containerPort: 47500 # discovery SPI port
            - containerPort: 10800 # thin client/JDBC port
            - containerPort: 8080 # REST API
          volumeMounts:
            - name: ignite-config
              mountPath: /opt/ignite/apache-ignite/config
      volumes:
        - name: ignite-config
          configMap:
            name: ignite-config
---
apiVersion: v1
kind: Service
metadata:
  name: ignite
spec:
  clusterIP: None
  selector:
    app: ignite
  ports:
    - port: 47100
      name: communication
    - port: 47500
      name: discovery
